Optimizations detected by Sonar
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-help-plugin@1446786 13f79535-47bb-0310-9956-ffa450edef68